[gd_scene load_steps=6 format=2]

[ext_resource path="res://TileMapGenericScenerary.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene_child_inicial.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46, 30 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 48 )

[node name="Scene_child_inicial" type="Node2D"]
script = ExtResource( 2 )

[node name="Ground" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 0, 25, 0, 1, 25, 0, 2, 25, 0, 3, 25, 0, 4, 25, 0, 5, 25, 0, 6, 25, 0, 7, 25, 0, 8, 25, 0, 9, 25, 0, 65536, 25, 0, 65537, 25, 0, 65538, 25, 0, 65539, 25, 0, 65540, 25, 0, 65541, 25, 0, 65542, 25, 0, 65543, 25, 0, 65544, 25, 0, 65545, 25, 0, 131072, 25, 0, 131073, 25, 0, 131074, 25, 0, 131075, 25, 0, 131076, 25, 0, 131077, 25, 0, 131078, 25, 0, 131079, 25, 0, 131080, 25, 0, 131081, 25, 0, 196608, 25, 0, 196609, 25, 0, 196610, 25, 0, 196611, 25, 0, 196612, 25, 0, 196613, 25, 0, 196614, 25, 0, 196615, 25, 0, 196616, 25, 0, 196617, 25, 0, 262144, 25, 0, 262145, 25, 0, 262146, 25, 0, 262147, 25, 0, 262148, 25, 0, 262149, 25, 0, 262150, 25, 0, 262151, 25, 0, 262152, 25, 0, 262153, 25, 0, 327680, 25, 0, 327681, 25, 0, 327682, 25, 0, 327683, 25, 0, 327684, 25, 0, 327685, 25, 0, 327686, 25, 0, 327687, 25, 0, 327688, 25, 0, 327689, 25, 0, 393216, 25, 0, 393217, 25, 0, 393218, 25, 0, 393219, 25, 0, 393220, 25, 0, 393221, 25, 0, 393222, 25, 0, 393223, 25, 0, 393224, 25, 0, 393225, 25, 0, 458752, 25, 0, 458753, 25, 0, 458754, 25, 0, 458755, 25, 0, 458756, 25, 0, 458757, 25, 0, 458758, 25, 0, 458759, 25, 0, 458760, 25, 0, 458761, 25, 0, 524288, 25, 0, 524289, 25, 0, 524290, 25, 0, 524291, 25, 0, 524292, 25, 0, 524293, 25, 0, 524294, 25, 0, 524295, 25, 0, 524296, 25, 0, 524297, 25, 0, 589824, 25, 0, 589825, 25, 0, 589826, 25, 0, 589827, 25, 0, 589828, 25, 0, 589829, 25, 0, 589830, 25, 0, 589831, 25, 0, 589832, 25, 0, 589833, 25, 0 )

[node name="Altar1" parent="." instance=ExtResource( 1 )]
position = Vector2( 25, -49 )
tile_data = PoolIntArray( 589826, 13, 0 )

[node name="WallVertical" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 0, 32, 0, 2, 32, 0, 6, 32, 0, 10, 32, 0, 65536, 32, 0, 65538, 32, 0, 65542, 32, 0, 65546, 32, 0, 131072, 32, 0, 131076, 32, 0, 131080, 32, 0, 131082, 32, 0, 196608, 32, 0, 196612, 32, 0, 196616, 32, 0, 196618, 32, 0, 262144, 32, 0, 262150, 33, 0, 262154, 32, 0, 327680, 32, 0, 327686, 33, 0, 327690, 32, 0, 393216, 32, 0, 393222, 33, 0, 393226, 32, 0, 458752, 32, 0, 458758, 33, 0, 458762, 32, 0, 524288, 32, 0, 524292, 32, 0, 524298, 32, 0, 589824, 32, 0, 589828, 33, 0, 589834, 32, 0 )

[node name="WallHorizontal" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 0, 34, 0, 1, 34, 0, 2, 34, 0, 3, 34, 0, 6, 34, 0, 7, 34, 0, 8, 34, 0, 9, 34, 0, 131076, 34, 0, 131077, 34, 0, 262146, 33, 0, 262150, 34, 0, 262151, 34, 0, 327682, 33, 0, 393216, 34, 0, 393217, 34, 0, 393218, 34, 0, 393219, 34, 0, 393224, 34, 0, 393225, 34, 0, 524290, 34, 0, 524291, 34, 0, 524292, 34, 0, 524293, 34, 0, 524294, 34, 0, 524295, 34, 0, 655360, 34, 0, 655361, 34, 0, 655362, 34, 0, 655363, 34, 0, 655366, 34, 0, 655367, 34, 0, 655368, 34, 0, 655369, 34, 0 )

[node name="Itens" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 1 )
tile_data = PoolIntArray( 4, 22, 0, 5, 22, 0, 131077, 17, 0, 393219, 17, 0, 393224, 17, 0, 524294, 17, 0 )

[node name="ObstacleChildInicial1" parent="." instance=ExtResource( 1 )]
position = Vector2( 80, -1 )
scale = Vector2( 3, 3 )
tile_data = PoolIntArray( -65535, 7, 0 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 328.592, 580.989 )

[node name="AltarBox1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AltarBox1"]
position = Vector2( 200.189, 576.757 )
shape = SubResource( 1 )

[node name="TransitionAreaChildInicialFinal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransitionAreaChildInicialFinal"]
position = Vector2( 320, -248 )
shape = SubResource( 2 )

[connection signal="body_entered" from="AltarBox1" to="Player" method="_on_AltarBox1_body_entered"]
[connection signal="body_exited" from="AltarBox1" to="Player" method="_on_AltarBox1_body_exited"]
[connection signal="body_entered" from="TransitionAreaChildInicialFinal" to="Player" method="_on_TransitionAreaChildInicialFinal_body_entered"]
